# Singularity

./: CMakeLists.txt  README  THANKS  revision.h.in.cmake
cmake/: showoptions.cmake
dep/: CMakeLists.txt
dep/StormLib/: CMakeLists.txt  StormCommon.h
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/adpcm/: CMakeLists.txt  adpcm.h
dep/bzip2/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/huffman/: CMakeLists.txt  huff.h
dep/jemalloc/: CMakeLists.txt
dep/jenkins/: CMakeLists.txt
dep/libtomcrypt/: CMakeLists.txt
dep/libtommath/: CMakeLists.txt
dep/lzma/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt
dep/pklib/: CMakeLists.txt  pklib.h
dep/sparse/: CMakeLists.txt  sparse.h
dep/zlib/: CMakeLists.txt
sql/base/: auth_database.sql  characters_database.sql
sql/updates/characters/: 2011_09_22_00_characters_character_currency.sql
sql/updates/world/: 2011_09_22_00_gameobject_template.sql  2011_10_08_00_singularity_string.sql
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  ArenaTeamMgr.cpp  ArenaTeamMgr.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h
src/server/game/Calendar/: Calendar.cpp  Calendar.h
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLink.cpp  ChatLink.h
src/server/game/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
src/server/game/DataStores/: DB2Stores.cpp  DB2Stores.h  DB2Structure.h  DB2fmt.h  DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.cpp  DBCStructure.h  DBCfmt.h
src/server/game/DungeonFinding/: LFG.h  LFGGroupData.cpp  LFGGroupData.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.cpp  LFGPlayerData.h  LFGScripts.cpp  LFGScripts.h
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: Grid.h  GridDefines.h  GridLoader.h  GridRefManager.h  GridReference.h  GridStates.cpp  GridStates.h  NGrid.h  ObjectGridLoader.cpp  ObjectGridLoader.h
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/server/game/Guilds/: Guild.cpp  Guild.h  GuildMgr.cpp  GuildMgr.h
src/server/game/Instances/: InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp  InstanceScript.h
src/server/game/Loot/: LootMgr.cpp  LootMgr.h
src/server/game/Mails/: Mail.cpp  Mail.h
src/server/game/Maps/: Map.cpp  Map.h  MapInstanced.cpp  MapInstanced.h  MapManager.cpp  MapManager.h  MapRefManager.h  MapReference.h  ZoneScript.h
src/server/game/Miscellaneous/: Formulas.h  Language.h  SharedDefines.h
src/server/game/Movement/: DestinationHolder.cpp  DestinationHolder.h  DestinationHolderImp.h  FollowerRefManager.h  FollowerReference.cpp  FollowerReference.h  MotionMaster.cpp  MotionMaster.h  MovementGenerator.cpp  MovementGenerator.h  MovementGeneratorImpl.h  MovementStructures.h  Traveller.h
src/server/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  OutdoorPvPMgr.cpp  OutdoorPvPMgr.h
src/server/game/Pools/: PoolMgr.cpp  PoolMgr.h
src/server/game/Quests/: QuestDef.cpp  QuestDef.h
src/server/game/Reputation/: ReputationMgr.cpp  ReputationMgr.h
src/server/game/Scripting/: MapScripts.cpp  ScriptLoader.cpp  ScriptMgr.cpp  ScriptMgr.h  ScriptSystem.cpp
src/server/game/Server/: WorldPacket.cpp  WorldPacket.h  WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketAcceptor.h  WorldSocketMgr.cpp  WorldSocketMgr.h
src/server/game/Skills/: SkillDiscovery.cpp  SkillDiscovery.h  SkillExtraItems.cpp  SkillExtraItems.h
src/server/game/Spells/: Spell.cpp  Spell.h  SpellEffects.cpp  SpellInfo.cpp  SpellInfo.h  SpellMgr.cpp  SpellMgr.h  SpellScript.cpp  SpellScript.h
src/server/game/Texts/: CreatureTextMgr.cpp  CreatureTextMgr.h
src/server/game/Tickets/: TicketMgr.cpp  TicketMgr.h
src/server/game/Tools/: CharacterDatabaseCleaner.cpp  CharacterDatabaseCleaner.h  PlayerDump.cpp  PlayerDump.h
src/server/game/Weather/: Weather.cpp  Weather.h  WeatherMgr.cpp  WeatherMgr.h
src/server/game/World/: World.cpp  World.h
src/server/scripts/: CMakeLists.txt
src/server/scripts/Commands/: cs_account.cpp  cs_achievement.cpp  cs_debug.cpp  cs_event.cpp  cs_gm.cpp  cs_go.cpp  cs_gobject.cpp  cs_gps.cpp  cs_honor.cpp  cs_learn.cpp  cs_modify.cpp  cs_npc.cpp  cs_quest.cpp  cs_reload.cpp  cs_tele.cpp  cs_titles.cpp  cs_wp.cpp
src/server/scripts/Kalimdor/: CMakeLists.txt
src/server/shared/: Common.cpp  Common.h  CompilerDefs.h  Define.h  SystemConfig.h
src/server/worldserver/: Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/extractor/: CMakeLists.txt  MPQ.cpp  MPQ.h  dbc.cpp  headers.h  main.cpp
src/tools/vmap3_assembler/: CMakeLists.txt
src/tools/vmap3_extractor/: CMakeLists.txt
(+304 files in other folders)
